data/apps/argocd/traefik-read-write-body-plugin/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: excalidraw
  namespace: excalidraw
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - "excalidraw.xxx.com"
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: modify-page
      backendRefs:
        - name: excalidraw-excalidraw
          port: 80
